# aws-s3-file-uploader

./: .flake8  .gitignore  Dockerfile  Dockerfile.arm32  Makefile  README.md  poetry.toml  pyproject.toml
src/: DirectoryUploader.py  main.py
src/file_uploader/: __init__.py  cli.py  directory_watcher.py  log.py  main.py
tests/: test_directory_watcher.py  test_directoryuploader.py
