[tool.poetry]
name = "file-uploader"
version = "1.2.0"
description = "This component monitors a directory for new files, upload them to S3 and delete them upon successful upload."
readme = "README.md"
authors = ["BAPO"]

[tool.poetry.dependencies]
python = "^3.9"
stream-manager = "^1.1.1"
typer = "^0.12.3"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
autopep8 = "^2.3.1"
black = "^24.4.2"
flake8 = "7.1.0"
pylint = "^3.2.6"
pytest = "^8.3.1"
pytest-asyncio = "^0.23.8"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=1.3.1", "setuptools>=65.4.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
file-uploader-cli = "file_uploader.cli:cli"

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "semver"
dirty = true

[tool.black]
line-length = 120
target-version = ["py39"]
include = '\.pyi?$'
verbose = true

[tool.autopep8]
max-line-length = 120

[tool.isort]
profile = "black"
